--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Minimal by Steve Smith</title>
+    <title>MalikAQayum</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,12 +16,23 @@
     <div class="wrapper">
       <header>
         <h1>MalikAQayum</h1>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+        <p class="view"><a href="https://github.com/MalikAQayum/SteamTracker">View the Project on GitHub <small>SteamTracker</small></a></p>
         <ul>
-          <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="http://github.com/orderedlist/minimal">Fork On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTracker/raw/master/Steam-Tracker.user.js">Install <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTracker/archive/master.zip">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTracker/network">Fork On <strong>GitHub</strong></a></li>
+        </ul>
+	<p class="view"><a href="https://github.com/MalikAQayum/MrRobotFoD">View the Project on GitHub <small>MrRobotFoD</small></a></p>
+	<ul>
+          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/raw/master/MrRobotFoD.user.js">Install <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/archive/master.zip">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/network">Fork On <strong>GitHub</strong></a></li>
+        </ul>
+	<p class="view"><a href="https://github.com/MalikAQayum/SteamTrackerFoD">View the Project on GitHub <small>SteamTrackerFoD</small></a></p>
+	<ul>
+          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/raw/master/Steam-TrackerFoD.user.js">Install <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/archive/master.zip">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -83,8 +94,7 @@
         <a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p>This project is maintained by <a href="https://github.com/MalikAQayum">MalikAQayum</a></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
