--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <h1>MalikAQayum</h1>
         <p class="view"><a href="https://github.com/MalikAQayum/SteamTracker">View the Project on GitHub <small>SteamTracker</small></a></p>
         <ul>
-          <li><a href="https://github.com/MalikAQayum/SteamTracker/raw/master/Steam-Tracker.user.js">Install <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/MalikAQayum/SteamTracker/archive/master.zip">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTracker/raw/master/Steam-Tracker.user.js">Install <strong>SteamTracker</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTracker/archive/master.zip">Download <strong>Zip File</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/SteamTracker/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
 	<p class="view"><a href="https://github.com/MalikAQayum/MrRobotFoD">View the Project on GitHub <small>MrRobotFoD</small></a></p>
 	<ul>
-          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/raw/master/MrRobotFoD.user.js">Install <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/archive/master.zip">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/raw/master/MrRobotFoD.user.js">Install <strong>MrRobotFoD</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/archive/master.zip">Download <strong>Zip File</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/MrRobotFoD/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
 	<p class="view"><a href="https://github.com/MalikAQayum/SteamTrackerFoD">View the Project on GitHub <small>SteamTrackerFoD</small></a></p>
 	<ul>
-          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/raw/master/Steam-TrackerFoD.user.js">Install <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/archive/master.zip">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/raw/master/Steam-TrackerFoD.user.js">Install <strong>SteamTrackerFoD</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/archive/master.zip">Download <strong>Zip File</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
       </header>
