--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
           <li><a href="https://github.com/MalikAQayum/SteamTracker/archive/master.zip">Download <strong>Zip File</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/SteamTracker/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
-	<p class="view"><a href="https://github.com/MalikAQayum/MrRobotFoD">View the Project on GitHub <small>Userscript</small></a></p>
+	<p class="view"><a href="https://github.com/MalikAQayum/MrRobotFoD">View the Project on GitHub <small>MrRobotFoD</small></a></p>
 	<ul>
-          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/raw/master/MrRobotFoD.user.js">Install <strong>MrRobotFoD</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/MrRobotFoD/raw/master/MrRobotFoD.user.js">Install <strong>Userscript</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/MrRobotFoD/archive/master.zip">Download <strong>Zip File</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/MrRobotFoD/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
-	<p class="view"><a href="https://github.com/MalikAQayum/SteamTrackerFoD">View the Project on GitHub <small>Userscript</small></a></p>
+	<p class="view"><a href="https://github.com/MalikAQayum/SteamTrackerFoD">View the Project on GitHub <small>SteamTrackerFoD</small></a></p>
 	<ul>
-          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/raw/master/Steam-TrackerFoD.user.js">Install <strong>SteamTrackerFoD</strong></a></li>
+          <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/raw/master/Steam-TrackerFoD.user.js">Install <strong>Userscript</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/archive/master.zip">Download <strong>Zip File</strong></a></li>
           <li><a href="https://github.com/MalikAQayum/SteamTrackerFoD/network">Fork On <strong>GitHub</strong></a></li>
         </ul>
