--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 
         <p><em>View the <a href="https://malikaqayum.github.io/SteamTracker">source of this content</a>.</em></p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <p>SteamTracker Userscript, adds features to the steam profile / community app hub / steam store page.</p>
 
         <h1>MrRobotFoD</h1>
 
         <p><em>View the <a href="https://malikaqayum.github.io/MrRobotFoD">source of this content</a>.</em></p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <p>MrRobotFoD Userscripts, uses mr.robot/the steam web chat/ASF to add fod and no cost stuff to your steam account.</p>
 
         <h1>SteamTrackerFoD</h1>
 
         <p><em>View the <a href="https://malikaqayum.github.io/SteamTrackerFoD">source of this content</a>.</em></p>
 
-        <p>Let's get the whole "linebreak" thing out of the way. The next paragraph contains two phrases separated by a single newline character:</p>
+        <p>Gets a list of is_free apps from steam-tracker.com and sends !addlicense one by one using the steam browser chat. (Requires to be logged in on http://steam-tracker.com/ & Using ASF & Steam Web Chat.)</p>
 
     </section>
       <footer>
