--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 	      
         <h1>SteamTracker</h1>
 
-        <p><em>View the <a href="https://malikaqayum.github.io/SteamTracker">source of this content</a>.</em></p>
+        <p><em>View the <a href="https://malikaqayum.github.io/SteamTracker">ReadMe for SteamTracker</a>.</em></p>
 
         <p>SteamTracker Userscript, adds features to the steam profile / community app hub / steam store page.</p>
 
         <h1>MrRobotFoD</h1>
 
-        <p><em>View the <a href="https://malikaqayum.github.io/MrRobotFoD">source of this content</a>.</em></p>
+        <p><em>View the <a href="https://malikaqayum.github.io/MrRobotFoD">ReadMe for MrRobotFoD</a>.</em></p>
 
         <p>MrRobotFoD Userscripts, uses mr.robot/the steam web chat/ASF to add fod and no cost stuff to your steam account.</p>
 
         <h1>SteamTrackerFoD</h1>
 
-        <p><em>View the <a href="https://malikaqayum.github.io/SteamTrackerFoD">source of this content</a>.</em></p>
+        <p><em>View the <a href="https://malikaqayum.github.io/SteamTrackerFoD">ReadMe for SteamTrackerFoD</a>.</em></p>
 
         <p>Gets a list of is_free apps from steam-tracker.com and sends !addlicense one by one using the steam browser chat. (Requires to be logged in on http://steam-tracker.com/ & Using ASF & Steam Web Chat.)</p>
 
