--- a/SteamCurator/index.html
+++ b/SteamCurator/index.html
@@ -16,6 +16,21 @@
   <body>
 	<div class="container-fluid">
 		<div class="row">
+			<div class="col-md-12">
+				<h2>
+					Steam Curator
+				</h2>
+				<p>
+					Steam Curator provides some data/stats, about your curator, on it is own "livestat"page.
+				</p>
+				<p>
+					<button onclick="location.href='https://github.com/MalikAQayum/SteamCurator/raw/master/SteamCurator.user.js';" type="button" class="btn btn-outline-primary">Install SteamCurator</button>
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="container-fluid">
+		<div class="row">
 			<div class="col-md-6">
 				<img src="./images/livestat.png" alt="add through curator" height="100%" width="100%">
 			</div>
