--- a/SteamCurator/index.html
+++ b/SteamCurator/index.html
@@ -21,7 +21,9 @@
 					Steam Curator
 				</h2>
 				<p>
-					Steam Curator provides some data/stats, about your curator, on it is own "livestat"page.
+					Steam Curator provides some data/stats, about your curator, on it is own "livestat"page.<br>
+					Line 44 : const clanid="33779114-pcgameit";<br/>
+					Line 44 : const clanid="your clanid";<br/>
 				</p>
 				<p>
 					<button onclick="location.href='https://github.com/MalikAQayum/SteamCurator/raw/master/SteamCurator.user.js';" type="button" class="btn btn-outline-primary">Install SteamCurator</button>
