making it clear it only works for chrome.
making it clear it only works for chrome.

--- a/SteamCurator/index.html
+++ b/SteamCurator/index.html
@@ -22,6 +22,7 @@
 				</h2>
 				<p>
 					Steam Curator provides some data/stats, about your curator, on it is own "livestat"page.<br>
+					<h3>FOR NOW ONLY CHROME IS SUPPORTED</h3><br/>
 					Line 44 : const clanid="33779114-pcgameit";<br/>
 					Line 44 : const clanid="your clanid";<br/>
 				</p>
